@@ -90,7 +90,7 @@ signed-dist: dist
 
 
 CXX11TEST=test ` $(FIM_EXE) -V | grep standard | head -1  | tr -d -c '[:digit:]'` -gt 200301
-FIMNORCOPTS= --no-rc-file --no-etc-rc-file --no-history
+FIMNORCOPTS= --no-rc-file --no-etc-fimrc-file --no-history
 FIMSCLTSTOPTS=-C '_downscale_huge_at_load=-1;_magnify_factor=2;_reduce_factor=2;' --no-auto-scale -o dumb -q 
 FIMVIDEOTESTOPTS=-K ']]].[[fmfmwsk--++hhlltW' -K ':quit' --chars-press '' # --chars-press -K
 NO_ASAN=ASAN_OPTIONS=detect_leaks=0
@@ -500,9 +500,9 @@ if WANT_READLINE
 endif
 if ENABLE_HISTORY
 	$(FIM_EXE) $(FIMNORCOPTS) $(top_srcdir)/media/ -o dumb --no-history --no-history-load --no-history-save -kq # FIXME: bogus test
-	rm -f .fim_history && HOME=`pwd` $(FIM_EXE) -N --no-etc-rc-file $(top_srcdir)/media/ -o dumb -C 'next;' -c quit && test `cat .fim_history` = 'next;' && rm .fim_history
+	rm -f .fim_history && HOME=`pwd` $(FIM_EXE) -N --no-etc-fimrc-file $(top_srcdir)/media/ -o dumb -C 'next;' -c quit && test `cat .fim_history` = 'next;' && rm .fim_history
 else
-	rm -f .fim_history && HOME=`pwd` $(FIM_EXE) -N --no-etc-rc-file $(top_srcdir)/media/ -o dumb -C 'next;' -c quit && test -n .fim_history
+	rm -f .fim_history && HOME=`pwd` $(FIM_EXE) -N --no-etc-fimrc-file $(top_srcdir)/media/ -o dumb -C 'next;' -c quit && test -n .fim_history
 endif
 if ENABLE_PNG
 	$(FIM_EXE) $(FIMNORCOPTS)         -V | grep upported.file.formats | grep png
